kubernetes/clusters/kenobi/database/templates/ingressroute.yaml
#
# InfluxDB
#
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute

metadata:
  name: influxdb
  namespace: database

spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`influxdb.feldman.in`)
      kind: Rule
      services:
        - name: shared-influxdb
          port: 8086
  tls:
    secretName: influxdb-feldman-in-tls
